# liquiditybank

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: flow-diagram.tsx  vault-door.tsx  wallet-shell.tsx
app/lib/: constants.ts  helius.ts  liquiditybank.idl.json  pda.ts  program.ts
app/scripts/: burn-my-tokens.mjs  check-fees.mjs  check-old-revenue.mjs  crank-burn-from-curve.mjs  crank-collect-curve-fees.mjs  drain-old-revenue.mjs  dump-pump-global.mjs  find-buy-v2.mjs  find-buyback-recipient.mjs  init-protocol.mjs  init-user-vol-acc.mjs  inspect-curve-txs.mjs  inspect-curve.mjs  inspect-jupiter-swap-tx.mjs  sweep-sessions.mjs  test-direct-pump-buy.mjs  test-jupiter-buy.mjs  verify-launch.mjs
idls/: pumpfun.idl.json  pumpswap.idl.json
keeper/: index.ts  package-lock.json  package.json  tsconfig.json
keeper/idl/: liquiditybank.json
keeper/lib/: cranks.ts  programs.ts
keeper/scripts/: burn-from-curve.ts  e2e-collect.ts  e2e-launch.ts  grow-lp.ts  init-protocol.ts
programs/liquiditybank/: Cargo.toml
programs/liquiditybank/src/: constants.rs  errors.rs  lib.rs  pda.rs  state.rs
programs/liquiditybank/src/instructions/: admin_collect_revenue.rs  burn_from_curve.rs  collect_amm_fees.rs  collect_curve_fees.rs  grow_lp.rs  initialize_protocol.rs  mod.rs  register_launch.rs
scripts/: deploy-mainnet.sh  start-localnet.sh
tests/: liquiditybank.ts  package-lock.json  package.json  tsconfig.json
(+11 files in other folders)
