[package]
name = "liquiditybank"
version = "0.1.0"
description = "Self-deepening permanent liquidity for pump.fun launches"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquiditybank"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022", "associated_token"] }
solana-security-txt = "1.1"
